[gd_scene load_steps=15 format=2]

[ext_resource path="res://sources/streetBackground.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/mainCharacter.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/NPCscene/bomj.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/DialogArea.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/DialogPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Minecraftia.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://scenes/game/Street.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 138.5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.878431, 0.847059, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.517647, 0.443137, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.247059, 0.2, 0.184314, 1 )

[sub_resource type="GDScript" id=4]
resource_name = "read_letter_btn"
script/source = "extends Button

func _ready():
	visible = false
"

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StreetBackground" type="Sprite" parent="TextureRect"]
texture = ExtResource( 1 )
centered = false

[node name="blocks" type="Node" parent="."]

[node name="ground" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 0, 480 )

[node name="ground31" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 384 )

[node name="ground42" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 320 )

[node name="ground44" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 128 )

[node name="ground45" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 160 )

[node name="ground46" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 192 )

[node name="ground47" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 224 )

[node name="ground48" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 256 )

[node name="ground49" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 288 )

[node name="ground43" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 352 )

[node name="ground39" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 416 )

[node name="ground40" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( -32, 448 )

[node name="ground41" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( -32, 480 )

[node name="ground2" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 256, 480 )

[node name="ground10" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 480, 480 )

[node name="ground17" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 736, 480 )

[node name="ground25" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 832, 480 )

[node name="ground28" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 928, 480 )

[node name="ground32" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 992, 480 )

[node name="ground34" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 416 )

[node name="ground37" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 352 )

[node name="ground50" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 160 )

[node name="ground51" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 192 )

[node name="ground52" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 224 )

[node name="ground53" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 256 )

[node name="ground54" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 288 )

[node name="ground55" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 320 )

[node name="ground38" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 384 )

[node name="ground35" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 448 )

[node name="ground36" parent="blocks" instance=ExtResource( 2 )]
position = Vector2( 1024, 480 )

[node name="ground33" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 960, 480 )

[node name="ground29" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 896, 480 )

[node name="ground30" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 864, 480 )

[node name="ground26" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 800, 480 )

[node name="ground27" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 768, 480 )

[node name="ground18" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 704, 480 )

[node name="ground19" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 672, 480 )

[node name="ground20" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 640, 480 )

[node name="ground21" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 608, 480 )

[node name="ground22" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 576, 480 )

[node name="ground23" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 544, 480 )

[node name="ground24" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 512, 480 )

[node name="ground11" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 448, 480 )

[node name="ground12" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 416, 480 )

[node name="ground13" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 384, 480 )

[node name="ground14" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 352, 480 )

[node name="ground15" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 320, 480 )

[node name="ground16" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 288, 480 )

[node name="ground3" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 224, 480 )

[node name="ground4" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 192, 480 )

[node name="ground5" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 160, 480 )

[node name="ground6" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 128, 480 )

[node name="ground7" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 96, 480 )

[node name="ground8" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 64, 480 )

[node name="ground9" parent="blocks" instance=ExtResource( 2 )]
visible = false
position = Vector2( 32, 480 )

[node name="StaticBody2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 776, 224 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 336 )

[node name="DialogAreaBomj" parent="." instance=ExtResource( 5 )]
position = Vector2( 819, 344 )
dialog_key = "bomj"

[node name="CollisionShape2D" parent="DialogAreaBomj" index="0"]
position = Vector2( -11, -16.5 )
shape = SubResource( 1 )

[node name="DialogPlayer" parent="." instance=ExtResource( 6 )]
scene_text_file = "res://json/world_dialog.json"

[node name="read_letter_btn" type="Button" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 239.0
margin_bottom = 87.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
enabled_focus_mode = 0
text = "Прочитать письмо"
script = SubResource( 4 )

[connection signal="pressed" from="read_letter_btn" to="." method="_on_read_letter_btn_pressed"]

[editable path="DialogAreaBomj"]
